<resources>
    <string name="addetect_demo_title">广告检测</string>
    <string name="hold_dialog_enabled">true</string>
    <string name="anti_virus_enabled">true</string>
    <string name="ad_detect_enabled">true</string>
    <string name="cloud_message_filter_enabled">true</string>
    <string name="cloud_dianxin_db_enabled">true</string>
    <string name="net_access_dialog">true</string>
    <string name="region_type">0</string>
    <string name="huawei_cloud">true</string>
    <string name="phone_num_location">true</string>
    <string name="hsm_stat_enable">true</string>
    <string name="net_assistant_enable">true</string>
    <string name="hsm_cust_permission">true</string>
    <string name="trash_tms_support">true</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Deselect all</string>
    <string name="network_alert_mobile">Remove restriction</string>
    <string name="network_alert_wifi">Remove restriction</string>
    <string name="not_note">Do not remind again</string>
    <string name="open_permission">Remove</string>
    <string name="close_permission">Cancel</string>
    <string name="network_mobile_message_new">%s was restricted from using your cellular network. Remove the restriction?</string>
    <string name="network_wifi_message_new">%s was restricted from using WLAN networks. Remove the restriction?</string>
    <string name="app_name">Phone Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="spaceclean_lower_mem_tips">Remaining internal storage: %1$s (%2$s/%3$s)</string>
    <string name="spaceclean_btn_spacemanager">Storage management</string>
    <string name="spaceclean_lower_mem_chart_name">Remaining storage vs. performance</string>
    <string name="spaceclean_phone_function_tips">Certain system features may not be available when performance drops.</string>
    <string name="spaceclean_txt_optimize_tips">To ensure your phone can run properly, free up %1$s of storage space.</string>
    <string name="spaceclean_lower_mem_chart_ysite">Performance</string>
    <string name="spaceclean_lower_mem_chart_xsite">Remaining storage</string>
    <string name="spaceclean_full_storage_warning">No space in internal storage</string>
    <string name="spaceclean_full_storage_warning_msg">The phone will take longer to respond. Also, some of phone\'s features will be limited including loss of new mails and messages. To avoid these, create free space. Delete unnecessary data such as mails, photos and apps.</string>
    <string name="spaceclean_full_storage_confirm">OK</string>
    <string name="spaceclean_not_commonly_used_settings_title">Infrequently used data cleanup reminder</string>
    <string name="spaceclean_not_commonly_used_settings_message">Remind me to clean up large files and apps that are rarely used</string>
    <string name="spaceclean_not_commonly_used_notification_title">Found infrequently used data</string>
    <string name="spaceclean_not_commonly_used_notification_message">Touch to view and delete</string>
    <string name="spaceclean_infrequently_used_data_tip">Infrequently used</string>
    <string name="spaceclean_should_clean_trash_tip_new">Please clean</string>
    <string name="power_close">Close</string>
    <string name="cpu_time">CPU time used</string>
    <string name="cpu_time_front">CPU time used (foreground)</string>
    <string name="gps_time">GPS running time</string>
    <string name="wifi_time">WLAN running time</string>
    <string name="data_send_size">Uploaded mobile data</string>
    <string name="data_recv_size">Downloaded mobile data</string>
    <string name="wlan_send_size">Uploaded WLAN data</string>
    <string name="wlan_recv_size">Downloaded WLAN data</string>
    <string name="power_consumption_size">Power consumption level</string>
    <string name="power_background_consumption_size">Background consumption level</string>
    <string name="version">Version: %s</string>
    <string name="consuption_detail_title">Detailed power info</string>
    <string name="os">Android OS</string>
    <string name="media_server">Media server</string>
    <string name="consumption_hint_title">Power-intensive prompt</string>
    <string name="consumption_analysis_hint">Statistics from last charging</string>
    <string name="time_on">Time on</string>
    <string name="display_setting">Display settings</string>
    <string name="scan_signal_time">Time searching for network</string>
    <string name="cpu_bg">CPU time used (background)</string>
    <string name="systemmanager_main_view_harassment">Harassment filter</string>
    <string name="harassment_warning_text">Default messaging app changed to third-party app. Only messages from blacklisted numbers can be blocked (not including those with special prefixes). Call blocking won\'t be affected.</string>
    <string name="charing_full_already">Battery full</string>
    <string name="check_for_all">Optimize</string>
    <string name="consume_detail_button_new">Consumption level</string>
    <string name="consume_detail_textview_title">Power usage details</string>
    <string name="consume_battery_percent_title">Remaining battery percentage</string>
    <string name="consume_battery_percent_summary">Show the remaining power percentage in the status bar</string>
    <string name="alert_dialog_save">Save</string>
    <string name="harassmentInterception_blacklist_number">Numbers blacklist</string>
    <string name="harassmentInterception_blacklist_keywords">Keywords blacklist</string>
    <string name="harassmentInterception_whitelist_number">Numbers whitelist</string>
    <string name="harassmentInterceptionAddToBlacklistFromContacts">Add from contacts</string>
    <string name="harassmentInterceptionAddToBlacklistFromCalllog">Add from call log</string>
    <string name="harassmentInterceptionAddToBlacklistFromSMS">Add from messages</string>
    <string name="Button_Blacklist_Add">Add</string>
    <string name="harassmentInterceptionMenuManuallyAdd">Manually add</string>
    <string name="harassmentInterception_BlacklistHeader">Match prefix</string>
    <string name="harassmentInterception_notify_rule_title">Notifications</string>
    <string name="harassment_interception_message_title">Harassment filter</string>
    <string name="harassment_interception_summary_configurable">Block messages and calls according to the interception rules</string>
    <string name="harassment_interception_rule_title">Interception rules</string>
    <string name="harassment_manual_update_title">Manual update</string>
    <string name="interception_rule_intellligent_sms_title">Smart SMS message interception</string>
    <string name="title_auto_update_virus_lib">Auto-update</string>
    <string name="title_manual_update_Virus_lib">Manual update</string>
    <string name="title_is_wifi_only_update">Only WLAN update the virus lib</string>
    <string name="title_virus_lib">VIRUS LIBRARY</string>
    <string name="power_intensive_prompt_detail">Notify me when power-intensive apps are detected</string>
    <string name="notification_memcpu_title">Notify when slow</string>
    <string name="notification_memcpu_description">Send notifications when the memory or CPU usage is high and the phone runs slowly</string>
    <string name="super_power_saving_title_subtitle">ULTRA POWER SAVING</string>
    <string name="super_power_saving_introduce_title">Introduction to ultra power saving</string>
    <string name="textview_history_title">Power-intensive app history</string>
    <string name="no_traffic_notification">To ensure the accuracy of the data usage statistics, please fill out the following fields and perform a manual calibration.</string>
    <string name="no_traffic_app_title">Ignore data usage</string>
    <string name="no_traffic_app_subtitle">Ignore data usage for selected apps</string>
    <string name="extra_traffic_package_title">Additional data plans</string>
    <string name="leisure_time_traffic_title">Off-peak data</string>
    <string name="roaming_traffic_title">Roaming data</string>
    <string name="setting_about">About</string>
    <string name="power_setting_preference_category_title2">Connection during sleep</string>
    <string name="power_setting_wlan_list_preference_title">Keep WLAN on when sleeping</string>
    <string name="power_setting_data_preference_title">Keep mobile data on when sleeping</string>
    <string name="main_screen_entry_feedback">Feedback</string>
    <string name="shortcut_title">Shortcuts</string>
    <string name="harassmentInterceptionBlackWhitelistTitle_subtitle">BLACKLIST/WHITELIST</string>
    <string name="harassmentInterceptionAddToWhitelistFromSMS">Add from intercepted messages</string>
    <string name="harassmentInterceptionAddToWhitelistFromCalllog">Add from intercepted calls</string>
    <string name="harassment_intelligent_call_blocking">Auto-block harassing calls</string>
    <string name="harassment_interception_blacklist">Blacklist block</string>
    <string name="harassment_interception_all_calls_des">Block all calls, including from whitelist numbers</string>
    <string name="harassment_call_rules_title">Call block rules</string>
    <string name="harassment_sms_rules_title">Message block rules</string>
    <string name="harassment_auto_update_intell_title">Auto-update identification database</string>
    <string name="harassment_setting_other_setting">OTHER SETTINGS</string>
    <string name="harassment_block_all_stranger">Block all strangers</string>
    <string name="harassment_block_unknow_call">Block unknown/hidden numbers</string>
    <string name="harassment_block_all_call">Block all incoming calls</string>
    <string name="harassment_block_unknow_call_des">Unknown, empty, and private numbers will be blocked</string>
    <string name="harassment_block_stranger_call_des">All non-contact numbers will be blocked</string>
    <string name="firewall_title">Power usage firewall</string>
    <string name="super_high_power_title">Close excessively power-intensive apps</string>
    <string name="super_high_power_content">Auto-close excessively power-intensive apps running in the background</string>
    <string name="super_high_power_record">History of closed apps</string>
    <string name="title_space_lib">Storage database update</string>
    <string name="title_manual_update_space_lib">Manual update</string>
    <string name="title_auto_update_space_lib">Auto-update</string>
    <string name="space_clean_settings_update_in_wifi">Only update over WLAN</string>
    <string name="space_clean_settings_auto_clean_cache_change_new">Auto cleanup</string>
    <string name="space_clean_setting_auto_clean_cache_summary_change">Clean up unwanted system and app data</string>
    <string name="space_clean_setting_white_list_category">Whitelist</string>
    <string name="space_clean_setting_white_list_memory_change">Memory cleanup whitelist</string>
    <string name="main_screen_entry_open_intelligent_title">Smart tune-up</string>
    <string name="main_screen_entry_open_intelligent_summary">Download the latest app data from the cloud, and identify apps that use an excessive amount of power and pose privacy risks</string>
    <string name="virus_scan_mode">VIRUS SCAN MODE</string>
    <string name="virus_quick_scan_setting">Quick scan</string>
    <string name="virus_quick_scan_setting_summry">Scans key locations and apps</string>
    <string name="virus_global_scan_setting">Full scan</string>
    <string name="virus_global_scan_setting_summry">Scans whole device. This will take more time.</string>
    <string name="virus_global_scan_timer_setting_title">Scan reminder</string>
    <string name="virus_cloud_scan_title">Cloud scan</string>
    <string name="virus_cloud_scan_summery">Performs a full scan with Internet access for a more comprehensive sweep</string>
    <string name="virus_global_scan_timer_remind_summery">Remind me if I haven\'t scanned for over 30 days</string>
</resources>